travail/2e_semestre/bachelor_Sem/labo/compilateur/signature/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> exp
Rule 2     exp -> NAME OB exp CB next
Rule 3     exp -> exp more
Rule 4     exp -> NAME
Rule 5     more -> COMA exp more
Rule 6     more -> COMA exp
Rule 7     next -> DOT
Rule 8     next -> DOT exp

Terminals, with rules where they appear

CB                   : 2
COMA                 : 5 6
DOT                  : 7 8
NAME                 : 2 4
OB                   : 2
error                : 

Nonterminals, with rules where they appear

calc                 : 0
exp                  : 1 2 3 5 6 8
more                 : 3 5
next                 : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . exp
    (2) exp -> . NAME OB exp CB next
    (3) exp -> . exp more
    (4) exp -> . NAME

    NAME            shift and go to state 3

    calc                           shift and go to state 1
    exp                            shift and go to state 2

state 1

    (0) S' -> calc .



state 2

    (1) calc -> exp .
    (3) exp -> exp . more
    (5) more -> . COMA exp more
    (6) more -> . COMA exp

    $end            reduce using rule 1 (calc -> exp .)
    COMA            shift and go to state 5

    more                           shift and go to state 4

state 3

    (2) exp -> NAME . OB exp CB next
    (4) exp -> NAME .

    OB              shift and go to state 6
    COMA            reduce using rule 4 (exp -> NAME .)
    $end            reduce using rule 4 (exp -> NAME .)
    CB              reduce using rule 4 (exp -> NAME .)


state 4

    (3) exp -> exp more .

    COMA            reduce using rule 3 (exp -> exp more .)
    $end            reduce using rule 3 (exp -> exp more .)
    CB              reduce using rule 3 (exp -> exp more .)


state 5

    (5) more -> COMA . exp more
    (6) more -> COMA . exp
    (2) exp -> . NAME OB exp CB next
    (3) exp -> . exp more
    (4) exp -> . NAME

    NAME            shift and go to state 3

    exp                            shift and go to state 7

state 6

    (2) exp -> NAME OB . exp CB next
    (2) exp -> . NAME OB exp CB next
    (3) exp -> . exp more
    (4) exp -> . NAME

    NAME            shift and go to state 3

    exp                            shift and go to state 8

state 7

    (5) more -> COMA exp . more
    (6) more -> COMA exp .
    (3) exp -> exp . more
    (5) more -> . COMA exp more
    (6) more -> . COMA exp

  ! shift/reduce conflict for COMA resolved as shift
    $end            reduce using rule 6 (more -> COMA exp .)
    CB              reduce using rule 6 (more -> COMA exp .)
    COMA            shift and go to state 5

  ! COMA            [ reduce using rule 6 (more -> COMA exp .) ]

    more                           shift and go to state 9

state 8

    (2) exp -> NAME OB exp . CB next
    (3) exp -> exp . more
    (5) more -> . COMA exp more
    (6) more -> . COMA exp

    CB              shift and go to state 10
    COMA            shift and go to state 5

    more                           shift and go to state 4

state 9

    (5) more -> COMA exp more .
    (3) exp -> exp more .

  ! reduce/reduce conflict for COMA resolved using rule 3 (exp -> exp more .)
  ! reduce/reduce conflict for $end resolved using rule 3 (exp -> exp more .)
  ! reduce/reduce conflict for CB resolved using rule 3 (exp -> exp more .)
    COMA            reduce using rule 3 (exp -> exp more .)
    $end            reduce using rule 3 (exp -> exp more .)
    CB              reduce using rule 3 (exp -> exp more .)

  ! COMA            [ reduce using rule 5 (more -> COMA exp more .) ]
  ! $end            [ reduce using rule 5 (more -> COMA exp more .) ]
  ! CB              [ reduce using rule 5 (more -> COMA exp more .) ]


state 10

    (2) exp -> NAME OB exp CB . next
    (7) next -> . DOT
    (8) next -> . DOT exp

    DOT             shift and go to state 12

    next                           shift and go to state 11

state 11

    (2) exp -> NAME OB exp CB next .

    COMA            reduce using rule 2 (exp -> NAME OB exp CB next .)
    $end            reduce using rule 2 (exp -> NAME OB exp CB next .)
    CB              reduce using rule 2 (exp -> NAME OB exp CB next .)


state 12

    (7) next -> DOT .
    (8) next -> DOT . exp
    (2) exp -> . NAME OB exp CB next
    (3) exp -> . exp more
    (4) exp -> . NAME

    COMA            reduce using rule 7 (next -> DOT .)
    $end            reduce using rule 7 (next -> DOT .)
    CB              reduce using rule 7 (next -> DOT .)
    NAME            shift and go to state 3

    exp                            shift and go to state 13

state 13

    (8) next -> DOT exp .
    (3) exp -> exp . more
    (5) more -> . COMA exp more
    (6) more -> . COMA exp

  ! shift/reduce conflict for COMA resolved as shift
    $end            reduce using rule 8 (next -> DOT exp .)
    CB              reduce using rule 8 (next -> DOT exp .)
    COMA            shift and go to state 5

  ! COMA            [ reduce using rule 8 (next -> DOT exp .) ]

    more                           shift and go to state 4
WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for COMA in state 7 resolved as shift
WARNING: shift/reduce conflict for COMA in state 13 resolved as shift
WARNING: reduce/reduce conflict in state 9 resolved using rule (exp -> exp more)
WARNING: rejected rule (more -> COMA exp more) in state 9
WARNING: Rule (more -> COMA exp more) is never reduced
